# Possum-IDE

./: .gitignore  .gitmodules  CMakeLists.txt  DefaultLayout.ini  GenerateAndBuild.sh  README.md  imgui.ini  prebuild.lua
.cache/clangd/index/: Application.cpp.A7E9A092D7086D3F.idx  Application.h.0C2A5A2B5DF7FD8F.idx  ApplicationEvent.h.2617E006BDE75F6E.idx  CMakePlatform.cpp.C50FB8D6D9BADC2C.idx  CMakePlatform.h.36542ADB8F9B008A.idx  Core.h.43F681D494EBE169.idx  Core.h.84B381ACC4785BA3.idx  Event.h.EC45C3DE36579EAD.idx  GLFWInput.cpp.B5E97E8084B963AB.idx  GLFWWindow.cpp.0C0D56FFE007C456.idx  GLFWWindow.h.3735FD7520CA29C6.idx  GUI.cpp.161BAB46178F817F.idx  GUI.h.003F8762616BE0BD.idx  GraphicsContext.cpp.C5CF28BC9ABBBF82.idx  GraphicsContext.h.CFF004867A0AF7AD.idx  ImGuiBuild.cpp.6CE9825450A5B5AB.idx  Input.h.B65C1E4AB67DFE30.idx  KeyCodes.h.72AF96E6CFAA1633.idx  KeyEvent.h.FCA7297F6D9756BC.idx  Layer.h.49E6395B2EFDB6F2.idx  LayerStack.cpp.7CFC374923BDBF35.idx  LayerStack.h.EB6F030A22E987B8.idx  Log.cpp.A75301A82B8DE8A5.idx  Log.h.C7223839BE6ED7DF.idx  MouseEvent.h.29526590A40891D1.idx  OpenGLGUI.cpp.16ACD5C22C1C01BA.idx  OpenGLGUI.h.63E41501E3E390B8.idx  OpenGLGraphicsContext.cpp.B396C061D9201E38.idx  OpenGLGraphicsContext.h.D4C606FDD8C88E77.idx  OpenGLRendererAPI.cpp.31B0A2AA936B8291.idx  Platform.cpp.ECC96C169E00CFCA.idx  (+251 more)
Possum/: CMakeLists.txt  prebuild.lua
Possum/src/: PossumApp.cpp  PossumLayer.cpp  PossumLayer.h  psmpch.h
Possum/src/Core/: Buffer.h  FStream.cpp  FileInteraction.h  FileManager.cpp  FileManager.h  ImGuiCommands.cpp  ImGuiCommands.h  ImGuiRenderer.cpp  ImGuiRenderer.h  ProjectManager.cpp  ProjectManager.h
Possum/src/Possum/: PossumApp.cpp  PossumLayer.cpp  PossumLayer.h
Scripts/: setup-debug.sh  setup-release.sh
docs/release/: patchnotes.txt
